--- a/.github/workflows/files.yml
+++ b/.github/workflows/files.yml
@@ -18,4 +18,4 @@ jobs:
         run: echo "Hello, this is a test file!" > my_new_dir/test_file.txt
 
       - name: Show directory contents
-        run: ls -l my_new_dir
+        run: ls my_new_dir
